test/Fixtures/InvalidSuites/SuiteTeardown/Destructor.php
<?hh // strict

namespace HackPack\HackUnit\Tests\Fixtures\InvalidSuites\SuiteTeardown;

class Destructor
{
    <<TearDown('suite')>>
    public function __destruct()
    {
    }

    <<Test>>
    public function test(\HackPack\HackUnit\Assert $assert) : void
    {
    }
}
